from dataclasses import dataclass
from pathlib import Path
from typing import Dict, List, Optional


@dataclass(frozen=True)
class ScopeContext:
    start_dir: Path
    repo_root: Path
    scope_root: Path
    scope_chain: tuple[Path, ...]
    planning_config_path: Path


@dataclass
class RegistryStatus:
    artifact_type: str
    owner_id: Optional[str]
    root_path: str
    readme_path: str
    registry_path: str
    root_exists: bool
    readme_exists: bool
    registry_exists: bool
    error: Optional[str] = None


@dataclass
class InventoryContext:
    propose: object
    planning: object
    subfeatures: object
    execution: object
    proposal_root: Path
    proposal_readme: Path
    proposal_registry: Path
    planning_root: Path
    planning_readme: Path
    planning_registry: Path
    slice_root: Path
    slice_readme: Path
    slice_registry: Path


@dataclass
class Inventory:
    context: InventoryContext
    registry_statuses: List[RegistryStatus]
    proposal_rows: List[Dict[str, object]]
    planning_rows: List[Dict[str, object]]
    slice_rows: List[Dict[str, object]]
    proposal_dirs: List[Path]
    feature_dirs: List[Path]
    subfeature_dirs_by_feature: Dict[str, List[Path]]
    slice_dirs: List[Path]
    subfeature_registry_rows: Dict[str, List[Dict[str, object]]]


@dataclass
class TraceabilityRecord:
    owner_type: str
    owner_id: str
    owner_path: str
    story_id: str
    story_size: Optional[str]
    increments: str
    planned_slice_ids: List[str]
    execution_slice_ids: List[str]
    notes: str


@dataclass
class SemanticPreviewRecord:
    artifact_type: str
    artifact_id: str
    path: str
    code: str
    message: str
    apply_supported: bool = False

    def to_dict(self) -> Dict[str, object]:
        return {
            "artifact_type": self.artifact_type,
            "artifact_id": self.artifact_id,
            "path": self.path,
            "code": self.code,
            "message": self.message,
            "apply_supported": self.apply_supported,
        }


@dataclass
class TransitionCheckResult:
    outcome: str
    findings: List[SemanticPreviewRecord]
    override_flag: Optional[str] = None

    def to_dict(self) -> Dict[str, object]:
        return {
            "outcome": self.outcome,
            "findings": [item.to_dict() for item in self.findings],
            "override_flag": self.override_flag,
        }


@dataclass
class InstalledParityRecord:
    skill_name: str
    relative_path: str
    code: str
    message: str
    repo_path: str
    installed_path: str

    def to_dict(self) -> Dict[str, str]:
        return {
            "skill_name": self.skill_name,
            "relative_path": self.relative_path,
            "code": self.code,
            "message": self.message,
            "repo_path": self.repo_path,
            "installed_path": self.installed_path,
        }
