@startuml
' Class diagram for representative dataclasses and core types
class CommandSpec {
  +name: str
  +description: str
  +repo_root: Path
  +module_name: Optional[str]
}

class ScopeContext {
  +start_dir: Path
  +repo_root: Path
  +scope_root: Path
  +scope_chain: tuple[Path]
  +planning_config_path: Path
}

class RegistryStatus {
  +artifact_type: str
  +owner_id: Optional[str]
  +root_path: str
  +readme_path: str
  +registry_path: str
  +root_exists: bool
}

class Inventory {
  +context: InventoryContext
  +registry_statuses: List[RegistryStatus]
}

CommandSpec <-- CLI
ScopeContext <-- "workflow_state"
Inventory <-- "workflow_state"
RegistryStatus <-- "workflow_state"

@enduml
